--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 
 [dependencies]
 git2 = "0.8"
+clap = {version = "2.33", features = ["yaml"]}
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0.91", features = ["derive"] }
