--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ git2 = "0.8"
 clap = {version = "2.33", features = ["yaml"]}
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0.91", features = ["derive"] }
+rte = "0.2.1"
