--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.91", features = ["derive"] }
 rte = "0.2.1"
 serde_json = "1.0"
 bincode = "1.1.3"
+git2_credentials = "0.2.0"
