--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ git2 = "0.8"
 clap = {version = "2.33", features = ["yaml"]}
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0.91", features = ["derive"] }
-rte = "0.2.1"
+chrono-english = "0.1.4"
 serde_json = "1.0"
 bincode = "1.1.3"
 git2_credentials = "0.2.0"
