--- a/src/cli.yml
+++ b/src/cli.yml
@@ -10,15 +10,16 @@ subcommands:
       version: "0.1"
       about: Commits the code change
       args:
-        - message:
-            short: m
-            help: message for the commit
-            takes_value: true
-
         - time:
             short: t
             help: time at which commit should be pushed
             takes_value: true
+            required: true
+        - message:
+            short: m
+            help: message for the commit
+            takes_value: true
+            required: true
   - list:
       version: "0.1"
       about: list all commits not committed
